ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/SkippedTokens/parserSkippedTokens11/input.ts.stderr
error: Expected unicode escape
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/SkippedTokens/parserSkippedTokens11/input.ts:1:3
  |
1 | ; \ \ \ 
  |   ^

